samples/_failures_safe/1761368213_116f07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13411dbf.c: In function ‘main’:
./samples/SAFE/__tmp_13411dbf.c:176:5: error: expected declaration or statement at end of input
  176 |     char input[1024];
      |     ^~~~
